fixed brands icons on mobile display

--- a/style.css
+++ b/style.css
@@ -464,6 +464,7 @@ input[type="checkbox"]:checked~.filter-content {
   .brandsicons {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   #carouselExampleCaptions {
